# nmeabridgeapp

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/nmeabridge/: NmeaBridgeApp.kt
app/src/main/java/com/example/nmeabridge/bluetooth/: BluetoothDeviceSelector.kt  BluetoothGpsSource.kt
app/src/main/java/com/example/nmeabridge/nmea/: NmeaChecksum.kt  NmeaSource.kt
app/src/main/java/com/example/nmeabridge/server/: NmeaTcpServer.kt
app/src/main/java/com/example/nmeabridge/service/: NmeaForegroundService.kt  ServiceState.kt
app/src/main/java/com/example/nmeabridge/simulator/: NmeaSentenceBuilder.kt  SimulatorNmeaSource.kt
app/src/main/java/com/example/nmeabridge/ui/: MainActivity.kt  ServerScreen.kt  ServerViewModel.kt
app/src/main/java/uk/co/tfd/nmeabridge/: NmeaBridgeApp.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/nmeabridge/: NmeaChecksumTest.kt  NmeaSentenceBuilderTest.kt
app/src/test/java/uk/co/tfd/nmeabridge/: AccessorParityTest.kt  BmsProtocolTest.kt  ChartUtilsTickTest.kt  CorruptAutopilotStitchTest.kt  EngineProtocolTest.kt  FrameLogReaderTest.kt  FrameLogTest.kt  FrameRingTest.kt  HistoryDataSourceTest.kt  HistoryFieldCatalogTest.kt  HistoryLayoutCodecTest.kt  NmeaChecksumTest.kt  NmeaSentenceBuilderTest.kt  (+4 more)
app/src/test/resources/: performance_reference.csv
doc/: ble-transport.md  history-log-format.md  history-store.md
scripts/: app-health.sh  ble-diagnostic.py
simulator/: ble_server.py  nmea_ble_sim.py  pyproject.toml
(+49 files in other folders)
